# pytalent-monitor

./: LICENSE  README.md  pyproject.toml  pytalent-monitor.py  talent-monitoring.py
pyTalentMonitor/: __init__.py
